--- a/sass/media.sass
+++ b/sass/media.sass
@@ -21,8 +21,8 @@
 @media screen and(max-width: 1260px)
     .products
         &__padding
-            padding-left: 6px            
-            padding-right: 6px
+            padding-left: 15px            
+            padding-right: 15px
 
 @media screen and(max-width: 1240px)
     .header
@@ -81,7 +81,8 @@
     .burger
         display: block  
     .filter
-        position: absolute
+        position: fixed
+        top: auto
         z-index: 99       
         left: -100%
         transition: 0.4s
@@ -107,10 +108,13 @@
                 height: calc(100% - 37px)
                 width: 100%
         &__nav
-            padding: 0 20px        
+            padding: 0 20px
+            .nav-link
+                font-size: 18px        
     .sidebar
         left: 0 !important
         width: 100%
+        height: 100%
         top: calc(100% - 38px)
         &__menu
             height: calc(100% - 181px)
@@ -120,16 +124,20 @@
             display: none
         &__toggle-btn
             display: block    
+        &__item
+            font-size: 18px
+            &:hover
+                font-size: 22px    
     .top-0
         .sidebar__toggle-btn svg
             transform: rotate(180deg)
     .filter
-        &__content
-            top: 0
-            width: 100%
+        top: 0
+        height: 100%
+        width: 100%
         &__block
-            padding-left: 40px
-            padding-right: 40px    
+            width: 220px
+            margin: 0 auto
         &__close
             width: 40px
             height: 40px
@@ -139,4 +147,7 @@
     .products
         &__padding
             padding-left: 30px            
-            padding-right: 30px         
+            padding-right: 30px    
+    .search
+        &__input
+            width: 180px             
