--- a/sass/media.sass
+++ b/sass/media.sass
@@ -30,7 +30,7 @@
             padding-left: 10px            
             padding-right: 10px
         &__specifications   
-            font-size: 12px 
+            font-size: 12px   
     .product-page
         &__slider
             .lSAction>.lSNext
@@ -170,7 +170,9 @@
             padding-right: 25px 
         &__title
             font-size: 14px
-            color: $text-white    
+            color: $text-white   
+        &__cards
+            padding-bottom: 50px !important   
     .button
         &__filter
             display: block       
