--- a/sass/main.sass
+++ b/sass/main.sass
@@ -89,6 +89,106 @@ a, a:hover
     line-height: 1em
     margin-left: .2em
 
+.preloader
+	position: fixed
+	z-index: 9999999999
+	width: 100%
+	height: 100%
+	display: flex
+	align-items: center
+	justify-content: center
+	background-color: #000
+
+#bowlG
+	position: relative
+	width: 58px
+	height: 58px
+	margin: auto
+
+#bowl_ringG
+	position: absolute
+	width: 58px
+	height: 58px
+	border: 5px solid rgb(119,183,41)
+	border-radius: 58px
+	-o-border-radius: 58px
+	-ms-border-radius: 58px
+	-webkit-border-radius: 58px
+	-moz-border-radius: 58px
+
+.ball_holderG
+	position: absolute
+	width: 17px
+	height: 49px
+	left: 15px
+	top: 0px
+	animation-name: ball_moveG
+	-o-animation-name: ball_moveG
+	-ms-animation-name: ball_moveG
+	-webkit-animation-name: ball_moveG
+	-moz-animation-name: ball_moveG
+	animation-duration: 1.5s
+	-o-animation-duration: 1.5s
+	-ms-animation-duration: 1.5s
+	-webkit-animation-duration: 1.5s
+	-moz-animation-duration: 1.5s
+	animation-iteration-count: infinite
+	-o-animation-iteration-count: infinite
+	-ms-animation-iteration-count: infinite
+	-webkit-animation-iteration-count: infinite
+	-moz-animation-iteration-count: infinite
+	animation-timing-function: linear
+	-o-animation-timing-function: linear
+	-ms-animation-timing-function: linear
+	-webkit-animation-timing-function: linear
+	-moz-animation-timing-function: linear
+
+.ballG
+	position: absolute
+	left: 0px
+	top: -14px
+	width: 23px
+	height: 23px
+	background: rgb(119,183,41)
+	border-radius: 19px
+	-o-border-radius: 19px
+	-ms-border-radius: 19px
+	-webkit-border-radius: 19px
+	-moz-border-radius: 19px
+@keyframes ball_moveG
+	0%
+		transform: rotate(0deg)
+	100%
+		transform: rotate(360deg)
+@-o-keyframes ball_moveG
+	0%
+		-o-transform: rotate(0deg)
+	100%
+		-o-transform: rotate(360deg)
+@-ms-keyframes ball_moveG
+	0%
+		-ms-transform: rotate(0deg)
+	100%
+		-ms-transform: rotate(360deg)
+@-webkit-keyframes ball_moveG
+	0%
+		-webkit-transform: rotate(0deg)
+	100%
+		-webkit-transform: rotate(360deg)
+@-moz-keyframes ball_moveG
+	0%
+		-moz-transform: rotate(0deg)
+	100%
+		-moz-transform: rotate(360deg)
+
+.loaded_hiding .preloader 
+    -webkit-transition: 0.3s opacity
+    -o-transition: 0.3s opacity
+    transition: 0.3s opacity
+    opacity: 0
+
+.loaded .preloader 
+    display: none
 
 .ring
 	border: 3px solid $text-green
@@ -204,7 +304,6 @@ a, a:hover
 
 // content -- start 
 .content
-	height: calc(100vh - 3.5rem)!important
 	overflow-y: auto
 	position: relative
 	&::-webkit-scrollbar 
@@ -215,7 +314,6 @@ a, a:hover
 	&::-webkit-scrollbar-thumb:hover 
 		background-color: $text-gray
 	&__slider
-		height: calc(100vh - 8rem) !important
 		position: relative
 		&__image
 			img
@@ -277,9 +375,9 @@ a, a:hover
 						&::before
 							background-color: $text-green
 	&__bottom-block
-		bottom: 4px
 		position: absolute
 		width: 100%
+		bottom: 0
 		background-color: $text-black
 		&-link
 			font-family: 'Prototype', sans-serif
@@ -524,7 +622,7 @@ a, a:hover
 .modal-windows
 	position: fixed
 	padding: 35px 25px 25px 25px
-	z-index: 999
+	z-index: 9999
 	background-color: $text-black
 	border: 1px solid $text-gray
 	border-radius: 5px
@@ -606,7 +704,7 @@ a, a:hover
 	background-color: $text-black
 	position: sticky
 	top: 0
-	height: calc(100vh - 3.6rem)
+	height: calc(100vh - 60px)
 	padding: .93rem
 	&__title
 		text-align: center
@@ -1120,11 +1218,9 @@ a, a:hover
 	transform: rotate(180deg)
 
 .slider-block
-	height: calc(100vh - 8rem) !important
 	&__slide
 		position: relative
 		padding: 20px 20px 0 20px
-		height: calc(100vh - 8rem) !important
 		outline: 0 !important
 	&__bi
 		background-position: 200px center
@@ -1137,51 +1233,6 @@ a, a:hover
 		left: 0
 		opacity: 0.05
 		z-index: -9
-
-// .lg-toolbar .lg-close:after
-// 	content: ''
-// 	background-image: url('../img/svg/cross.svg')
-// 	background-position: center
-// 	background-repeat: no-repeat
-// 	background-size: cover
-// 	width: 15px
-// 	height: 15px
-// 	display: block
-
-// .lg-toolbar .lg-download:after
-// 	content: ''
-// 	background-image: url('../img/svg/download-icon.svg')
-// 	background-position: center
-// 	background-repeat: no-repeat
-// 	background-size: cover
-// 	width: 15px
-// 	height: 15px
-// 	display: block
-
-// .lg-actions .lg-next:before
-// 	content: ''
-// 	background-image: url('../img/svg/slider-arrow-right.svg')
-// 	background-position: center
-// 	background-repeat: no-repeat
-// 	background-size: contain
-// 	width: 40px
-// 	height: 50px
-// 	display: block
-
-// .lg-actions .lg-prev:after
-// 	content: ''
-// 	background-image: url('../img/svg/slider-arrow-left.svg')
-// 	background-position: center
-// 	background-repeat: no-repeat
-// 	background-size: contain
-// 	width: 40px
-// 	height: 50px
-// 	display: block
-
-// .lg-toolbar .lg-icon
-// 	display: flex
-// 	align-items: center
-
 
 .slider
 	display: inline-block
