--- a/sass/media.sass
+++ b/sass/media.sass
@@ -198,14 +198,14 @@
         &__filter
             display: block       
     .modal-windows
-        position: fixed
+        position: absolute
         z-index: 999
         left: 0
-        top: 3%
+        top: 0
         bottom: auto
         border-radius: 5px
         right: 0
-        margin: 0 auto
+        margin: 10px auto
         &__triangle
             display: none 
         &__bg
@@ -217,7 +217,7 @@
             bottom: 0
             z-index: 998
             background-color: rgba(0, 0, 0, .58)
-            position: absolute
+            position: fixed
 
 @media screen and (max-width: 830px)
     .product-page
