--- a/sass/main.sass
+++ b/sass/main.sass
@@ -644,7 +644,7 @@ a, a:hover
 	&--partner
 		bottom: 70px
 		left: calc(0px + 300px)
-		width: 380px
+		max-width: 380px
 		border-bottom-left-radius: 0
 	&__triangle
 		width: 0
