--- a/sass/main.sass
+++ b/sass/main.sass
@@ -627,7 +627,7 @@ a, a:hover
 	right: 0
 	z-index: 99999
 	width: 100%
-	height: 100%
+	height: 100vh
 // modal-windows -- start 	 			
 .modal-windows
 	position: absolute
