--- a/sass/main.sass
+++ b/sass/main.sass
@@ -620,14 +620,14 @@ a, a:hover
 
 .mod
 	overflow-y: auto
-	position: fixed
+	position: absolute
 	top: 0
 	left: 0
 	bottom: 0
 	right: 0
 	z-index: 99999
 	width: 100%
-	height: 100vh
+	height: 100%
 // modal-windows -- start 	 			
 .modal-windows
 	position: absolute
