--- a/sass/main.sass
+++ b/sass/main.sass
@@ -618,19 +618,9 @@ a, a:hover
 			width: 15px
 // search -- end
 
-.mod
-	overflow-y: auto
-	position: absolute
-	top: 0
-	left: 0
-	bottom: 0
-	right: 0
-	z-index: 99999
-	width: 100%
-	height: 100%
 // modal-windows -- start 	 			
 .modal-windows
-	position: absolute
+	position: fixed
 	padding: 35px 25px 25px 25px
 	z-index: 9999
 	background-color: $text-black
