--- a/sass/media.sass
+++ b/sass/media.sass
@@ -225,6 +225,16 @@
             padding: 0
         &__input
             width: 100%
+    .mod
+        overflow-y: auto
+        position: fixed
+        top: 0
+        left: 0
+        bottom: 0
+        right: 0
+        z-index: 99999
+        width: 100%
+        height: 100%
 @media screen and (max-width: 830px)
     .product-page
         &__slider-image
