--- a/sass/main.sass
+++ b/sass/main.sass
@@ -6,8 +6,8 @@
 	color: $text-dark_gray
 
 ::selection
-	background-color: $text-green
-	color: $text-white
+	background-color: $text-green !important
+	color: $text-white !important
 
 
 input, textarea, button 
@@ -23,7 +23,6 @@ html, body
 
 body
 	font-size: 16px
-	min-width: 320px
 	position: relative
 	line-height: 1.5
 	letter-spacing: .6px
@@ -254,10 +253,10 @@ a, a:hover
 		height: calc(100% - 155px)
 		overflow-y: auto
 		padding: 0.93rem
-		scrollbar-width: none;
-		&::-webkit-scrollbar 
-			width: 0px;
-			background: rgba(255, 255, 255, 0.0);
+		scrollbar-width: none
+		&::-webkit-scrollbar
+			width: 0px
+			background: rgba(255, 255, 255, 0.0)
 	&__item
 		list-style-type: none
 		padding: 
@@ -580,6 +579,17 @@ a, a:hover
 		text-transform: initial	
 		font-size: 16px
 		display: none
+	&__download
+		&:after
+			content: ''
+			width: 19px
+			height: 19px
+			background-image: url('../img/icon__download.png')
+			background-position: center
+			background-repeat: no-repeat
+			background-size: cover
+			display: inline-block
+			margin-left: 5px
 // btn -- end
 
 // search -- start 	 
@@ -748,19 +758,22 @@ a, a:hover
 	color: $text-green
 	font-family: 'Prototype', sans-serif
 
+.page-header
+	color: $text-dark_gray
+	text-transform: uppercase
+	font-family: 'Prototype', sans-serif
+	font-size: 1.5rem
+
 // products -- start	
 .products
-	&__title
-		color: $text-dark_gray
-		text-transform: uppercase
-		font-family: 'Prototype', sans-serif
-		font-size: 1.5rem
 	&__wrap
 		padding: 10px
 		box-shadow: 0 0 2px 0 $text-green
 		border-radius: 10px
 		background-color: #000000
 		border: solid 1px #000000
+		max-width: 300px
+		margin: 0 auto
 		transition: 0.3s
 		&:hover
 			box-shadow: 0 0 4px 0 $text-green
@@ -795,7 +808,7 @@ a, a:hover
 		padding-right: 1rem	
 // products -- end
 
-// product-page -- start					
+// product-page -- start			
 .product-page
 	padding: 10px 0
 	&__bi
@@ -1088,7 +1101,6 @@ a, a:hover
 		-ms-flex: 0 0 40%
 		flex: 0 0 40%
 		max-width: 40%
-
 // product-page -- end
 
 // style-form -- start
@@ -1114,12 +1126,17 @@ a, a:hover
 			background-color: rgba(255, 255, 255, 0.0)
 			-webkit-text-fill-color: $text-dark_gray
 		&:-webkit-autofill, &:hover, &:focus
-				border: 0
-				border-bottom: 1.1px solid $text-dark_gray !important
-				-webkit-text-fill-color: $text-dark_gray !important
-				background-color: transparent !important
-				-webkit-box-shadow: 0 0 0px 1000px $text-black inset !important
-				transition: background-color 5000s ease-in-out 0s
+			border: 0
+			border-bottom: 1.1px solid $text-dark_gray !important
+			-webkit-text-fill-color: $text-dark_gray !important
+			background-color: transparent !important
+			-webkit-box-shadow: 0 0 0px 1000px transparent inset !important
+			transition: background-color 5000s ease-in-out 0s
+	&__textarea
+		border: 0
+		border-radius: 6px
+		width: 100%
+		height: 130px !important
 // style-form -- end
 .help-block
 	font-size: 15px
@@ -1367,3 +1384,65 @@ a, a:hover
 	height: 0px
 	border-color: transparent
 	border-style: solid
+
+.about-company
+	&__logo
+		max-width: 330px
+		width: 100%
+	&__block
+		max-width: 550px
+		margin: 0 auto
+		font-size: 17px
+	&__form
+		padding-top: 1.2rem
+		&-title
+			font-family: 'Prototype', sans-serif
+			font-size: 1rem
+			text-align: center
+
+.documentation
+	&__card
+		display: flex
+		flex-direction: column
+		align-items: center
+		padding-bottom: 1.5rem
+		&-title
+			font-size: 1.12rem
+			margin-bottom: 0
+		&-image
+			width: 75px
+			margin:
+				top: 1.2rem
+				bottom: 1.2rem
+	&__description
+		&-title
+			color: $text-green
+			font-size: 1.12rem
+			font-family: 'Prototype', sans-serif
+		&-slider
+			font-size: 0.89rem
+			.slick-slide
+				outline: 0 !important
+			.slick-dots
+				display: flex
+				padding-left: 0
+				justify-content: center
+				align-items: center
+				li
+					list-style-type: none
+					button
+						font-family: 'Prototype', sans-serif
+						color: $text-green 
+						font-size: 1rem
+						border: 0
+						margin: 3px 10px
+						width: 26px
+						height: 26px
+						border-radius: 100px
+						background-color: transparent
+					&.slick-active
+						button
+							color: $text-white 
+							background-color: $text-green
+
+							
