--- a/sass/media.sass
+++ b/sass/media.sass
@@ -95,6 +95,7 @@
             position: initial
             width: 100%
             padding-bottom: 30px
+            z-index: 0
             &__content
                 height: auto
                 border: 0
@@ -143,10 +144,22 @@
                 margin-right: 0
     .modal-windows
             right: 36px
+
+@media screen and (max-width: 1200px)
+    .about-company
+        &__form
+            max-width: 600px
+            margin: 0 auto
+            &-group
+                width: 100%
+
 @media screen and (max-width: 1025px)
     .slider
         &-image1
             left: calc(100vh - 70vh)
+    .content
+        &::-webkit-scrollbar
+            width: 0px
         
 @media screen and(max-width: 1010px)
     .header
@@ -192,8 +205,8 @@
         &__padding
             padding-left: 25px            
             padding-right: 25px 
-        &__title
-            color: $text-white   
+    .page-header
+        color: $text-white  
     .button
         &__filter
             display: block       
@@ -398,9 +411,8 @@
         padding: 0 29px
         text-align: left !important
         font-size: 1rem
-    .products
-        &__title
-            font-size: 0.9rem
+    .page-header
+        font-size: 0.9rem
 @media screen and (max-width: 370px)
     .content__slider
         &-arrow
@@ -439,6 +451,15 @@
         .content__slider__description-title-fz
             font-size: .55rem
 
+@media screen and (max-width: 1370px)
+    .about-company
+        .style-form
+            input
+                width: 100%
+            label
+                padding: 
+                    left: 0
+                    right: 0
 
 @media (max-width: 1370px) and (min-width: 1360px)
     .slider
@@ -453,10 +474,11 @@
             &__description
                 &-title-fz
                     font-size: .9rem
+
 @media (max-width: 1370px) and (min-height: 1020px)
       .slider
-        &-image2
-            left: calc(100vh - 85vh)
+          &-image2
+              left: calc(100vh - 85vh)
 
 @media (max-width: 1025px) and (min-width: 1020px)
     .slider
